NIHVIVO-3282: Fixed layout issues when editing a user account.

--- a/webapp/web/css/account/account.css
+++ b/webapp/web/css/account/account.css
@@ -175,7 +175,7 @@ padding-right: 5px;
     display:none;
 }
 #associated label {
-    margin-bottom:5px;
+    margin-bottom: 10px;
 }
 #associationOptions {
     float:right; 
@@ -209,8 +209,8 @@ padding-right: 5px;
 }
 #associateProfileBackgroundTwo {
     background-color:#f1f2ee;
-    padding:7px 94px 42px 0;
-    margin-top:-112px; 
+    padding:7px 94px 45px 0;
+    margin-top:-120px; 
     margin-right:-8px;
     z-index:-100;
     border:1px solid #ccc;
@@ -225,7 +225,7 @@ padding-right: 5px;
 #associateProfileBackgroundThree {
     background-color:#f1f2ee;
     padding:7px 94px 26px 12px;
-    margin-top:-112px; 
+    margin-top:-120px; 
     margin-left:-12px;
     margin-right:-8px;
     z-index:-100;
